# highres_TA

./: .gitignore  model selection protocol.txt  per_datasets_dict.yaml  pyproject.toml  renaming_dict.yaml
notebooks/: EDA.ipynb  inference.ipynb  training.ipynb  training_iterations_config.yaml
notebooks/.ipynb_checkpoints/: training-checkpoint.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
recycling_bin/: modelling_tools.py  recycling_bin.ipynb
scripts/: cv_config_coarse_search.yaml  cv_example_config.yaml  get_timeseries_data_claude.py  inference.ipynb  inference.py  model_selection.py  outlier_detection.py  preprocessing.py  training.py  utils.py
scripts/config/: cv_example_config.yaml  example_training_config.yaml
src/highres_ta/: __init__.py  estimators.py  evaluation.py  modelling_tools.py  preprocessing.py  preprocessing_tools.py
trained_models/Catboost/RMSEUncert_iter10/fold0/: RMSEUncert_iter10.joblib
trained_models/Catboost/RMSEUncert_iter10/fold1/: RMSEUncert_iter10.joblib  RMSEUncert_iter10_metadata.json
trained_models/Catboost/RMSEUncert_iter10/fold2/: RMSEUncert_iter10.joblib  RMSEUncert_iter10_metadata.json  RMSEUncert_iter10_residuals.csv
trained_models/Catboost/RMSEUncert_iter10/fold3/: RMSEUncert_iter10.joblib  RMSEUncert_iter10_metadata.json  RMSEUncert_iter10_residuals.csv
trained_models/Catboost/RMSEUncert_iter10/fold4/: RMSEUncert_iter10.joblib  RMSEUncert_iter10_metadata.json
trained_models/Catboost/RMSE_iter10/: RMSE_iter10_cv_eval_scores.csv
trained_models/Catboost/RMSE_iter10/fold0/: RMSE_iter10.joblib  RMSE_iter10_metadata.json  RMSE_iter10_residuals.csv
trained_models/Catboost/RMSE_iter10/fold1/: RMSE_iter10.joblib  RMSE_iter10_residuals.csv
trained_models/Catboost/RMSE_iter10/fold2/: RMSE_iter10.joblib
trained_models/Catboost/RMSE_iter10/fold3/: RMSE_iter10.joblib
trained_models/Catboost/RMSE_iter10/fold4/: RMSE_iter10.joblib  RMSE_iter10_residuals.csv
trained_models/RandomForest/RandomForest_nest5/: RandomForest_nest5_cv_eval_scores.csv
trained_models/RandomForest/RandomForest_nest5/fold0/: RandomForest_nest5_metadata.json  (+1 more)
(+8 files in other folders)
